--- a/.gitignore
+++ b/.gitignore
@@ -143,7 +143,6 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-output/
 
 # Spyder project settings
 .spyderproject
@@ -206,3 +205,6 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Ignored outputs
+output/
